--- a/src/Results.css
+++ b/src/Results.css
@@ -1,27 +1,24 @@
 .Results {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    max-width: 300px;
-    margin: 10px;
-    text-align: center;
-    font-family: arial;
-    padding: 16px;
-    display: inline-block;
-    
-  }
-  
-  .price {
-    color: grey;
-    font-size: 22px;
-  }
-  
-  
-  
-  .Results button:hover {
-    opacity: 0.7;
-  }
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 300px;
+  margin: 10px;
+  text-align: center;
+  font-family: arial;
+  padding: 16px;
+  display: inline-block;
+}
 
-  img {
-    width:200px;
-    height: 200px;
+.price {
+  color: grey;
+  font-size: 22px;
+  margin-top: 10px;
+}
 
-  }
+.Results button:hover {
+  opacity: 0.7;
+}
+
+img {
+  width: 200px;
+  height: 200px;
+}
